--- a/MLA-NLP-DAY1-FINAL-STUDENT-NB.ipynb
+++ b/MLA-NLP-DAY1-FINAL-STUDENT-NB.ipynb
@@ -58,9 +58,9 @@
     "bucketname = 'mlu-courses-datalake' # replace with your bucket name\n",
     "filename1 = 'MLA-NLP/data/final_project/training.csv' # replace with your object key\n",
     "filename2 = 'MLA-NLP/data/final_project/test.csv' # replace with your object key\n",
-    "pathname = '../../data/final_project'\n",
+    "pathname = './data/final_project'\n",
     "s3 = boto3.resource('s3')\n",
-    "if not path.exists(\"../../data/final_project\"):\n",
+    "if not path.exists(\"./data/final_project\"):\n",
     "    try:\n",
     "        os.makedirs(pathname)\n",
     "    except OSError:\n",
