--- a/MLA-NLP-DAY1-FINAL-STUDENT-NB.ipynb
+++ b/MLA-NLP-DAY1-FINAL-STUDENT-NB.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Final Project Day 1: K Nearest Neighbors Model for the Product Safety Dataset\n",
+    "## K Nearest Neighbors Model for the Product Safety Dataset\n",
     "\n",
-    "For the final project, build a K Nearest Neighbors model to predict the __human_tag__ field of the dataset. You will submit your predictions to the Leaderboard competition here: https://leaderboard.corp.amazon.com/tasks/352\n",
+    "Building a K Nearest Neighbors model to predict the __human_tag__ field of the dataset.\n",
     "\n",
     "Use the notebooks from the class and implement the model, train and test with the corresponding datasets. You will use a __classifier__. We are using F1 score to rank submissions. Sklearn provides the [__f1_score():__](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.f1_score.html) function if you want to see how your model works on your training or validation set.\n",
     "\n",
     "You can follow these steps:\n",
     "1. Read training-test data (Given)\n",
-    "2. Train a KNN classifier (Implement)\n",
-    "3. Make predictions on your test dataset (Implement)\n",
-    "4. Write your test predictions to a CSV file (Given)\n",
+    "2. Train a KNN classifier \n",
+    "3. Make predictions on your test dataset \n",
+    "4. Write your test predictions to a CSV file\n",
     "\n",
     "__You can use the KNN Classifier from here: https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html__"
    ]
@@ -66,8 +66,8 @@
     "    except OSError:\n",
     "        print (\"Creation of the directory %s failed\" % path)\n",
     "\n",
-    "s3.Bucket(bucketname).download_file(filename1, '../../data/final_project/training.csv')\n",
-    "s3.Bucket(bucketname).download_file(filename2, '../../data/final_project/test.csv')\n",
+    "s3.Bucket(bucketname).download_file(filename1, './data/training.csv')\n",
+    "s3.Bucket(bucketname).download_file(filename2, './data/test.csv')\n",
     "print (\"Successfully created the directory %s \" % path)"
    ]
   },
@@ -192,7 +192,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "train_df = pd.read_csv('../../data/final_project/training.csv', encoding='utf-8', header=0)\n",
+    "train_df = pd.read_csv('./data/training.csv', encoding='utf-8', header=0)\n",
     "train_df.head()"
    ]
   },
@@ -320,7 +320,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "test_df = pd.read_csv('../../data/final_project/test.csv', encoding='utf-8', header=0)\n",
+    "test_df = pd.read_csv('./data/test.csv', encoding='utf-8', header=0)\n",
     "test_df.head()"
    ]
   },
@@ -620,7 +620,7 @@
     "result_df[\"ID\"] = test_df[\"ID\"]\n",
     "result_df[\"human_tag\"] = test_predictions\n",
     " \n",
-    "result_df.to_csv(\"../../data/final_project/project_day1_result_2.csv\", encoding='utf-8', index=False)"
+    "result_df.to_csv(\"./data/project_result.csv\", encoding='utf-8', index=False)"
    ]
   },
   {
